--- a/src/components/PaintingCard/style.css
+++ b/src/components/PaintingCard/style.css
@@ -1,10 +1,10 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  height: 300px;
   margin: 1rem;
   position: relative;
-  width: 325px;
+  width: 300px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
 }
@@ -15,8 +15,9 @@
   text-align: center;
   background:rgb(49, 221, 121);
 }
-.card > .img-container > img {
-  width: 60%
+.card-body > .img-container > img {
+  width: 100%;
+  height: 300px;
 }
 
 
