updating instructions w/setState 😎

--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -19,3 +19,9 @@ li {
     color: white;
     font-family: 'Federant', cursive;
 }
+
+.instructions {
+    color: white;
+    font-family: 'Federant', cursive;
+    font-size: 30px;
+}
