--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 3rem;
     color: rgb(17, 102, 59);
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    margin-top: 110px;
 }
   
